@@ -1,5 +1,16 @@
 package ru.job4j.gc;
-
+/**
+ * класс для тестирования разных реализаций GC
+ * @version 0.8
+ * @author zhitenev
+ * используемые параметры для запуска:
+ * - Serial => -XX:+UseSerialGC
+ * - Parallel => -XX:+UseParallelGC
+ * - CMS => -XX:+UseConcMarkSweepGC (допуступен до JDK 14 будет игнорироваться и использовать G1)
+ * - G1 => -XX:+UseG1GC
+ * - ZGC => -XX:+UseZGC (в 14 версии является эксперементальным, требует
+ *          -XX: UnlockExperimentalVMOptions)
+ */
 import java.util.Random;
 
 public class GCTypeDemo {
